--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "src/gz_ros2_control"]
 	path = src/gz_ros2_control
 	url = git@github.com:Mildred34/gz_ros2_control.git
-[submodule "src/rog_gz"]
-	path = src/rog_gz
+[submodule "src/ros_gz"]
+	path = src/ros_gz
 	url = git@github.com:Mildred34/ros_gz.git
