use our own moveit model, + change name of the ros bridge msg, using the new interface name gz + add dependencies + change some forgotten old name of the robot + add new world model with a target

--- a/src/grasp_capture/package.xml
+++ b/src/grasp_capture/package.xml
@@ -19,10 +19,14 @@
   <depend>moveit_ros_planning_interface</depend>
   <depend>moveit_visual_tools</depend>
 
+  <exec_depend>ign_ros2_control</exec_depend>
   <exec_depend>moveit</exec_depend>
   <exec_depend>ros_gz_bridge</exec_depend>
   <exec_depend>ros_gz_gazebo</exec_depend>
   <exec_depend>rviz2</exec_depend>
+
+  <exec_depend>fingrip_description</exec_depend>
+  <exec_depend>fingrip_moveit_config</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
