FIX: deprecated names for ignition -> gz

--- a/src/grasp_capture/package.xml
+++ b/src/grasp_capture/package.xml
@@ -19,7 +19,7 @@
   <depend>moveit_ros_planning_interface</depend>
   <depend>moveit_visual_tools</depend>
 
-  <exec_depend>ign_ros2_control</exec_depend>
+  <exec_depend>gz_ros2_control</exec_depend>
   <exec_depend>moveit</exec_depend>
   <exec_depend>ros_gz_bridge</exec_depend>
   <exec_depend>ros_gz_gazebo</exec_depend>
