ADD: planning scene with table

--- a/src/grasp_capture/package.xml
+++ b/src/grasp_capture/package.xml
@@ -20,6 +20,8 @@
   <depend>moveit_visual_tools</depend>
 
   <exec_depend>gz_ros2_control</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>moveit</exec_depend>
   <exec_depend>ros_gz_bridge</exec_depend>
   <exec_depend>ros_gz_gazebo</exec_depend>
