(WIP) Parameters management + collision to add

--- a/src/grasp_capture/package.xml
+++ b/src/grasp_capture/package.xml
@@ -17,7 +17,7 @@
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>moveit_ros_planning_interface</depend>
-  <depend>moveit_visual_tools</depend>
+  <!-- <depend>moveit_visual_tools</depend> -->
 
   <exec_depend>gz_ros2_control</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
