ADD: package utilities for the simulation + new node get_expert_pose

--- a/src/robot_simulation_utilities/package.xml
+++ b/src/robot_simulation_utilities/package.xml
@@ -1,37 +1,28 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>grasp_capture</name>
+  <name>robot_simulation_utilities</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="alexis-h-34@hotmail.fr">alex</maintainer>
-  <license>TODO: License declaration</license>
+  <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
   <depend>rclcpp</depend>
-  <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
-  <depend>moveit_ros_planning_interface</depend>
-  <depend>robot_simulation_utilities</depend> 
-  <!-- <depend>moveit_visual_tools</depend> -->
 
-  <exec_depend>gz_ros2_control</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>moveit</exec_depend>
   <exec_depend>ros_gz_bridge</exec_depend>
   <exec_depend>ros_gz_gazebo</exec_depend>
-  <exec_depend>rviz2</exec_depend>
-
-  <exec_depend>fingrip_description</exec_depend>
-  <exec_depend>fingrip_moveit_config</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+  
 </package>
